  ignore all the rest. If you get errors about unknown options, you may either
  specify --disable-option-checking argument to continue accepting them (which
  only ever makes sense if you pass these options to sub-configure scripts) or,
  e.g. if the error is due to spelling an option name wrongly, fixing or
  removing its name.


3.1.3: (released 2019-??-??)
----------------------------

All:

- Fix regression in wxTranslations::AddCatalog() in 3.1.2 (Tomasz Słodkowicz).

All (GUI):

- Fix wxInfoBar close button size in high DPI (Stefan Ziegler).
- Make disabling the window before creating it actually work.
- Implement wxAuiNotebook::GetBestSize() (Sebastian Walderich).
- Allow changing tooltip text for button allowing to enter a new string
  in wxPGArrayEditorDialog.


3.1.2: (released 2018-12-10)
----------------------------

All:

- Add wxLZMA{Input,Output}Stream classes using external liblzma.
- Make wxList and wxVector iterators conform to input iterator requirements.
- Fix MT-safety problem when reading and writing from wxSocket (jkubalik).
- Fix build issues under HaikuOS (mill-j).
- Fix problem with wx-config installation and use under NetBSD (wiz).
- Avoid spurious errors on thread creation under NetBSD.
- Improve high DPI support in wxAui (Simon Rozman).
- Fix a bug with parsing time zones in wxDateTime::ParseFormat() (evileye).
- Update all 3rd party libraries to their latest versions (Maarten Bent).

All (GUI):

- wxAdvanced library was merged into wxCore, simply remove all references
  to "adv" from your build system, it is not needed any longer.
- Add support for non-integer font sizes (e.g. 10.5pt fonts).
- Add support for font weights in 1..1000 interval and not just light/bold.
- Add wxDataViewToggleRenderer::ShowAsRadio().
- Improve stock items consistency and aesthetics (dhowland).
- Fix bug with missing items in overflowing AUI toolbar (Maarten Bent).
- Revert to left-aligning wxSpinCtrl contents by default.