@@ -108,9 +108,13 @@ Changes in behaviour which may result in build errors
 3.1.3: (released 2019-??-??)
 ----------------------------
 
-All:
+INCOMPATIBLE CHANGES SINCE 3.1.2:
 
-- Fix regression in wxTranslations::AddCatalog() in 3.1.2 (Tomasz Słodkowicz).
+- New wxTranslations::GetAcceptableTranslations() method was problematic and
+  was removed, fixing various regressions in wxTranslations::AddCatalog() that
+  were introduced by it. Thanks to Tomasz Słodkowicz and Dummy for reporting
+  this and providing fixes for it.
+
 
 All (GUI):
 
